[package]
name = "dexposure-scraper"
version = "0.1.0"

authors = ["Joshua Matthews <josh@jmatth.com>"]
edition = "2018"

[dependencies]
select = "0.4.3"
reqwest = "0.9.5"
regex = "1"
lazy_static = "1.2.0"
serde = "1.0.83"
serde_json.version = "1.0.34"
serde_json.features = ["preserve_order"]
serde_derive = "1.0.83"
chrono = "0.4"
chrono-tz = "0.4"
clap = "~2.32"
indexmap = "1.3.0"
