[package]
name = "dexposure-scraper"
version = "0.1.0"

authors = ["Joshua Matthews <josh@jmatth.com>"]
edition = "2018"

[features]
default = []

# Include a debug field each json event with debug info.
debug-json = []

# Print the regexes used by the parser to the console.
dump-regexes = []

[dependencies]
select = "0.4.3"
reqwest = "0.9.5"
regex = { version = "1", features = ["pattern"] }
lazy_static = "1.2.0"
serde = { version = "1.0.83", features = ["derive"] }
serde_json = { version = "1.0.34", features = ["preserve_order"] }
chrono = "0.4"
chrono-tz = "0.4"
clap = "~2.32"
indexmap = "1.3.0"

[dev-dependencies]
assert_cmd = "0.12.0"
tempfile = "3.1.0"
